# aerogel

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  aerogel.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: rust.yml
src/: ai_client.rs  ai_manager.rs  config.rs  event_handler.rs  event_listener.rs  main.rs  overlay.rs
src/os/: mod.rs  nix.rs
