[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aerogel"
path = "src/main.rs"

[[bin]]
name = "overlay"
path = "src/overlay.rs"

[[bin]]
name = "ai_manager"
path = "src/ai_manager.rs"

[[bin]]
name = "event_listener"
path = "src/event_listener.rs"

[[bin]]
name = "event_handler"
path = "src/event_handler.rs"

[dependencies]
once_cell = "1.21.3"
pulldown-cmark = "0.9"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2.0"
toml = "0.8"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
colored = "2.1.0"
clap = { version = "4.5.10", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.13"
notify = "6.1.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
async-stream = "0.3"
base64 = "0.22.1"
mime_guess = "2.0.4" 
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio-stream = "0.1.11"
byteorder = "1.4.3"
rdev = "0.5.1"
nix = "0.30.1"
dirs = "5.0"
dotenv = "0.15"
tempfile = "3.8"
memmap2 = "0.9"

